Bug 87597 - PERSONAS: Search should use English, not localized category names
Summary: PERSONAS: Search should use English, not localized category names
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:5.3.0
Keywords: difficultyInteresting, easyHack, skillCpp, topicUI
Depends on:
Blocks:
 
Reported: 2014-12-22 15:50 UTC by Stanislav Horacek
Modified: 2017-02-14 08:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stanislav Horacek 2014-12-22 15:50:58 UTC
Choose Tools - Options - Personalization - Own Theme.
In Select Firefox Theme dialog, click one of the Categories button, e.g. Nature.
For English localization, you will retrieve all 9 themes (they're searched for "Nature" keyword). However, for e.g. Czech localization, you will get no theme, because they're searched for "Příroda" keyword (Czech translation of "Nature").

I think the English keyword should be used to get always any result.

The feature is new in 4.4. Tested in 4.4 beta2 and RC1, Ubuntu 14.04.
Comment 1 Robinson Tryon (qubit) 2014-12-23 22:32:57 UTC
Severity -> enhancement
Comment 2 Cor Nouws 2014-12-23 22:35:11 UTC
I think this is a bug, since it prevents to find themes..

Maybe the text on the button can be localised and then the search string send to the server English?

thanks for the issue Stanislav!
Cor
Comment 3 QA Administrators 2016-01-17 20:02:22 UTC Comment hidden (obsolete)
Comment 5 Muhammet Kara 2016-08-10 12:48:44 UTC
I have submitted a patch for this bug,[0] and I appreciate reviews/comments.

[0] https://gerrit.libreoffice.org/28027